@@ -184,7 +184,7 @@ int main(int argc, char** argv) {
 	}
 	
 	time( &_time_end );
-	printf( "Test encrypt and decrypt:\n\ttime: %d seconds\n\tdata: %ld MB"
+	printf( "Test encrypt and decrypt:\n\ttime: %I64d seconds\n\tdata: %ld MB"
 			"\n\tkey: %d bits\n\tmode: %s\n",
 			_time_end - _time_start, _data_len,
 			_key_len, _is_ecb? "EBC" : "CBC" );
