@@ -1,8 +1,13 @@
 ---------------------------------------------------------------------------
-OpenAES-0.2.0
+OpenAES-0.3.0
 Nabil S. Al Ramli
 www.nalramli.com
 ---------------------------------------------------------------------------
+
+OpenAES-0.3.0
+-------------
+* Add CMake support
+* platform independence fixes
 
 OpenAES-0.2.0
 -------------
